--- a/bibliography.bib
+++ b/bibliography.bib
@@ -515,3 +515,12 @@
     number = {Report number},
     address = {Timo von Oertzen, Department of Psychology, University of Virginia, 1023 Millmont Street, VA22903 Charlottesville.}
 }
+
+@incollection{fisher1970statistical,
+  title={Statistical methods for research workers},
+  author={Fisher, Ronald Aylmer},
+  booktitle={Breakthroughs in statistics: Methodology and distribution},
+  pages={66--70},
+  year={1970},
+  publisher={Springer}
+}
