--- a/bibliography.bib
+++ b/bibliography.bib
@@ -524,3 +524,30 @@
   year={1970},
   publisher={Springer}
 }
+
+@article{student1908probable,
+  title={The probable error of a mean},
+  author={Student},
+  journal={Biometrika},
+  pages={1--25},
+  year={1908},
+  publisher={JSTOR}
+}
+
+@article{pearson1900x,
+  title={X. On the criterion that a given system of deviations from the probable in the case of a correlated system of variables is such that it can be reasonably supposed to have arisen from random sampling},
+  author={Pearson, Karl},
+  journal={The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+  volume={50},
+  number={302},
+  pages={157--175},
+  year={1900},
+  publisher={Taylor \& Francis}
+}
+
+@misc{levene1960robust,
+  title={Robust tests for equality of variances},
+  author={Levene, H},
+  year={1960},
+  publisher={Contributions to Probability and Statistics: Essays in Honor of Harold~…}
+}
