--- a/bibliography.bib
+++ b/bibliography.bib
@@ -551,3 +551,20 @@
   year={1960},
   publisher={Contributions to Probability and Statistics: Essays in Honor of Harold~…}
 }
+
+@misc{hastie2009elements,
+  title={The elements of statistical learning: data mining, inference, and prediction},
+  author={Hastie, Trevor},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{diemerling2024implementing,
+  title={Implementing machine learning techniques for continuous emotion prediction from uniformly segmented voice recordings},
+  author={Diemerling, Hannes and Stresemann, Leonie and Braun, Tina and Von Oertzen, Timo},
+  journal={Frontiers in Psychology},
+  volume={15},
+  pages={1300996},
+  year={2024},
+  publisher={Frontiers Media SA}
+}
