--- a/bibliography.bib
+++ b/bibliography.bib
@@ -586,3 +586,55 @@
   year={1953},
   publisher={American Institute of Physics}
 }
+
+@article{van_rossum_python_1995,
+	title = {Python tutorial},
+	url = {https://ir.cwi.nl/pub/5007},
+	abstract = {Python is a simple, yet powerful programming language that bridges the gap between C and shell programming, and is thus ideally suited for ``throw-away programming'' and rapid prototyping. Its syntax is put together from constructs borrowed from a variety of other languages; most prominent are influences from ABC, C, Modula-3 and Icon. The Python interpreter is easily extended with new functions and data types implemented in C. Python is also suitable as an extension language for highly customizable C applications such as editors or window managers. Python is available for various operating systems, amongst which several flavors of UNIX, Amoeba, the Apple Macintosh O.S., and MS-DOS. This tutorial introduces the reader informally to the basic concepts and features of the Python language and system. It helps to have a Python interpreter handy for hands-on experience, but as the examples are self-contained, the tutorial can be read off-line as well. For a description of standard objects and modules, see the Python Library Reference manual. The Python Reference Manual gives a more formal definition of the language.},
+	language = {en},
+	urldate = {2025-02-13},
+	author = {van Rossum, Guido},
+	month = jan,
+	year = {1995},
+}
+
+@misc{stefan_aeberhard_wine_1992,
+	title = {Wine},
+	url = {https://archive.ics.uci.edu/dataset/109},
+	doi = {10.24432/C5PC7J},
+	urldate = {2025-02-13},
+	publisher = {UCI Machine Learning Repository},
+	author = {Stefan Aeberhard, M. Forina},
+	year = {1992},
+}
+
+@misc{touvron_llama:_2023,
+	title = {{LLaMA}: {Open} and {Efficient} {Foundation} {Language} {Models}},
+	shorttitle = {{LLaMA}},
+	url = {http://arxiv.org/abs/2302.13971},
+	doi = {10.48550/arXiv.2302.13971},
+	abstract = {We introduce LLaMA, a collection of foundation language models ranging from 7B to 65B parameters. We train our models on trillions of tokens, and show that it is possible to train state-of-the-art models using publicly available datasets exclusively, without resorting to proprietary and inaccessible datasets. In particular, LLaMA-13B outperforms GPT-3 (175B) on most benchmarks, and LLaMA-65B is competitive with the best models, Chinchilla-70B and PaLM-540B. We release all our models to the research community.},
+	urldate = {2025-02-13},
+	publisher = {arXiv},
+	author = {Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and Martinet, Xavier and Lachaux, Marie-Anne and Lacroix, Timothée and Rozière, Baptiste and Goyal, Naman and Hambro, Eric and Azhar, Faisal and Rodriguez, Aurelien and Joulin, Armand and Grave, Edouard and Lample, Guillaume},
+	month = feb,
+	year = {2023},
+	note = {arXiv:2302.13971},
+	keywords = {Computer Science - Computation and Language},
+}
+
+@article{picard_cross-validation_1984,
+	title = {Cross-{Validation} of {Regression} {Models}},
+	volume = {79},
+	issn = {0162-1459, 1537-274X},
+	url = {http://www.tandfonline.com/doi/abs/10.1080/01621459.1984.10478083},
+	doi = {10.1080/01621459.1984.10478083},
+	language = {en},
+	number = {387},
+	urldate = {2025-02-13},
+	journal = {Journal of the American Statistical Association},
+	author = {Picard, Richard R. and Cook, R. Dennis},
+	month = sep,
+	year = {1984},
+	pages = {575--583},
+}
