--- a/bibliography.bib
+++ b/bibliography.bib
@@ -628,3 +628,14 @@
 	year = {1984},
 	pages = {575--583},
 }
+
+@article{aeberhard1994comparative,
+  title={Comparative analysis of statistical pattern recognition methods in high dimensional settings},
+  author={Aeberhard, Stefan and Coomans, Danny and De Vel, Olivier},
+  journal={Pattern Recognition},
+  volume={27},
+  number={8},
+  pages={1065--1077},
+  year={1994},
+  publisher={Elsevier}
+}
