report number to {}

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -512,7 +512,7 @@
     institution = {Department of Psychology, University of Virginia, Charlottesville},
     year = {2017},
     type = {Technical Report},
-    number = {Report number},
+    number = {},
     address = {Timo von Oertzen, Department of Psychology, University of Virginia, 1023 Millmont Street, VA22903 Charlottesville.}
 }
 
