setup everything for JSS

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -128,6 +128,9 @@
 	pages = {416--426},
 }
 
+
+
+
 @article{hoekstra_are_2012,
 	title = {Are {Assumptions} of {Well}-{Known} {Statistical} {Techniques} {Checked}, and {Why} ({Not})?},
 	volume = {3},
@@ -350,10 +353,10 @@
 
 @misc{kaggle-survey-2022,
     author = {Paul Mooney},
-    title = {2022 Kaggle Machine Learning & Data Science Survey},
+    title = {2022 Kaggle Machine Learning \& Data Science Survey},
     year = {2022},
     howpublished = {\url{https://kaggle.com/competitions/kaggle-survey-2022}},
-    note = {Kaggle}
+    note = {Kaggle},
 }
 
 @article{devroye_distribution-free_1979,
